# snake

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
docs/adr/: ADR-001-bevy-ecs-runtime.md  ADR-002-bevy-ratatui-bridge.md  ADR-003-version-pinning-strategy.md
docs/c4/: snake-container.md  snake-context.md
docs/plans/: PLAN-RFC-001-terminal-snake-architecture.md
docs/prd/: PRD-001-terminal-snake.md
docs/rfc/: RFC-001-terminal-snake-architecture.md
src/: components.rs  config.rs  lib.rs  main.rs  plugin.rs  resources.rs  state.rs
src/systems/: collision.rs  food.rs  input.rs  lifecycle.rs  mod.rs  movement.rs  render.rs  scoring.rs
