[package]
name = "snake"
edition = "2021"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
bevy_ratatui = "0.11"
ratatui = "0.30"
rand = "0.9"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
unreachable = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
async_yields_async = "deny"
large_futures = "warn"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
integer_division = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[package.metadata.cargo-machete]
ignored = ["bevy_ratatui", "ratatui", "rand"]
